--- a/ai_agent_extension/manifest.json
+++ b/ai_agent_extension/manifest.json
@@ -1,32 +1,46 @@
 {
   "manifest_version": 3,
-  "name": "E-commerce Fashion HELPER",
-  "version": "1.0",
-  "description": "Find similar fashion items using AI",
+  "name": "Chat Extension",
+  "version": "0.0.4",
+  "description": "A chat extension using Gemini models",
   "permissions": [
+    "storage",
     "activeTab",
     "scripting",
-    "tabs"
+    "tabs",
+    "sidePanel"
   ],
   "host_permissions": [
     "<all_urls>"
   ],
-  "background": {
-    "service_worker": "background.js"
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_end"
-    }
-  ],
   "action": {
-    "default_title": "Toggle Fashion Finder Sidebar"
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "48": "assets/icons/icon48.png",
+      "128": "assets/icons/icon128.png"
+    }
+  },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"],
+    "css": ["capture-overlay.css"]
+  }],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "options_page": "popup.html",
+  "side_panel": {
+    "default_path": "popup.html"
   },
   "web_accessible_resources": [
     {
-      "resources": ["sidebar.html", "sidebar.css", "sidebar.js"],
+      "resources": ["assets/*", "capture-overlay.css"],
       "matches": ["<all_urls>"]
     }
   ]
